# axum-minijinja

./: .gitignore  README.md
web/: Cargo.toml
web/src/: main.rs
web/templates/: index.html
