[package]
name = "axum-minijinja"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1.12"
axum = "0.6.20"
csv = "1.3.0"
minijinja = { version = "1.0.9", features = ["loader"] }
tokio = { version = "1.33.0", features = ["full"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
